pdf moved to own component + config adaptions
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12157 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/build.xml
+++ b/contributions/didactor2/build.xml
@@ -27,6 +27,10 @@
              token="$${filemanagement.data.directory}"
              value="${filemanagement.data.directory}"/>
     <replace file="${build.dir}/webapp/WEB-INF/web.xml"
+             token="$${internalUrl}"
+             value="${internalUrl}"/>
+
+    <replace file="${build.dir}/webapp/WEB-INF/web.xml"
              token="$${filemanagement.data.url}"
              value="${filemanagement.data.url}"/>
   </target>
