--- a/contributions/didactor2/build.properties
+++ b/contributions/didactor2/build.properties
@@ -1,3 +1,3 @@
 build.dir = ${basedir}/build
 includepath = providers/educations/courses
-components = core,address,agenda,chat,competence,education,email,forum,metadata,portfolio,progress,sources,workspace,search,pop
+components = core,address,agenda,chat,competence,education,email,forum,metadata,portfolio,progress,sources,workspace,search,pop,pdf
