--- a/build.xml
+++ b/build.xml
@@ -457,6 +457,7 @@ builddate=${builddate}
         <include name="magic.xml"/>
         <include name="applications/Basics.xml"/>
         <include name="builders/core/*.xml"/>
+        <include name="builders/INDEX" />
         <include name="functions/**/*.xml"/>
         <include name="storage/**/*.xml"/>
         <include name="utils/**/*.xml"/>
