If Basics.xml in mmbase.jar, then you need an 'INDEX' for it too, because no direcotyr listing possible in class-loaders (AFAIK). Now, you can actually deploy Basics.xml even when it is not present in WEB-INF/config/applications
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12281 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/build.xml
+++ b/build.xml
@@ -463,6 +463,9 @@ builddate=${builddate}
         <include name="utils/**/*.xml"/>
       </fileset>
     </copy>
+    <echo file="${build.dir}/classes/org/mmbase/config/applications/INDEX">
+Basics.xml
+    </echo>
   </target>
 
   <target name="compile" description="Compile the source directory" depends="init.compile">
