any cloud-context security you want to have in the jar. During installation we only install security.xml now.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12285 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/cloudcontext/build.xml
+++ b/applications/cloudcontext/build.xml
@@ -7,5 +7,8 @@
   <property name="project.name"      value="cloudcontextsecurity" />
   <property name="project.package"   value="org/mmbase/security/implementation/cloudcontext" />
   <property name="project.target.templates.dir"   value="security" />
+	<!-- property name="project.extra.path" location="../classsecurity/build/mmbase-classsecurity.jar" /-->
+  <property name="project.config.dir.includes"   value="security/**" />
+  <property name="project.config.jar.includes"   value="**" />
   &base;
 </project>
