--- a/speeltuin/mark/batchupload/build.xml
+++ b/speeltuin/mark/batchupload/build.xml
@@ -49,7 +49,7 @@
 
   <!-- JAI -->
   <property name="jai.version" value="jai1_0_2-lib-solaris"/>
-  <property name="jai.url" value="http://ftp.eo.nl/ftp/download/jai/1.0.2/jai1_0_2-lib-solaris.tar.gz"/>
+  <property name="jai.url" value="http://www.mmbase.org/download/jars/jai/jai1_0_2-lib-solaris.tar.gz"/>
   <property name="jai_codec.jar" value="${build.dir}/expand/${jai.version}/jre/lib/ext/jai_codec.jar"/>
   <property name="jai_core.jar" value="${build.dir}/expand/${jai.version}/jre/lib/ext/jai_core.jar"/>
 
