using project.jars.includes in stead of 'extra.path'
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12394 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/editwizard/build.xml
+++ b/applications/editwizard/build.xml
@@ -7,7 +7,8 @@
   <property name="project.name"     value="editwizard" />
   <property name="project.package"   value="org/mmbase/applications/editwizard" />
   <property name="project.target.templates.dir"   value="edit/wizard" />
-  <property name="project.extra.path" location="../dove/build/mmbase-dove.jar" />
+
+  <property name="project.jars.includes" value="dove/build/mmbase-dove.jar" />
 
   &base;
 
