lets try building pdfs again
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12456 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/documentation/build.xml
+++ b/documentation/build.xml
@@ -270,7 +270,7 @@
   <!-- ================================================================================ -->
   <!-- Main documentation Target                                                        -->
   <!-- ================================================================================ -->
-  <target name="documentation" depends="documentation.html,documentation.static.copy"> <!-- ,documentation.pdf"-->
+  <target name="documentation" depends="documentation.html,documentation.static.copy,documentation.pdf">
     <!-- delete dir="${documentation.temp.dir}"/ -->
   </target>
  
