portfolio fixes, "logout <name>"
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12488 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
+++ b/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
@@ -39,3 +39,6 @@ DELETETHISFOLDERYESNO=Wilt u deze map inclusief de inhoud echt verwijderen?
 DELETEFOLDERITEMSYESNO=Wilt u de geselecteerde mapitems echt verwijderen?
 DELETEFOLDERITEMS=Verwijder mapitems
 ADDURL=Add URL
+SAVE=save
+REACTIONS=Reactions
+REACT=react
