*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12554 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
+++ b/contributions/didactor2/src/workspace/java/nl/didactor/component/workspace/WorkspaceMessageBundle.properties
@@ -1,44 +1,45 @@
 MYDOCUMENTS=My documents
 SHAREDDOCUMENTS=Shared documents
 FOLDERS=Folders
-CREATEFOLDER=Aanmaken map
-RENAMEFOLDER=Hernoemen map
-DELETEFOLDER=Verwijderen map
-TITLE=Titel
-DESCRIPTION=Beschrijving
-FILENAME=Bestand
-DATE=Datum
-CREATE=aanmaken
-RENAME=hernoemen
-MOVE=verplaatsen
-OPEN=openen
-MOVESINGLE=Verplaats
-FILESTO=bestand(en) naar:
-BACK=terug
-ADDDOCUMENT=Document plaatsen
-ADDSOURCE=Informatiebron plaatsen
-ADDCHATLOG=Chatverslag plaatsen
-MOVESELECTED=Verplaats geselecteerde
-DELETESELECTED=Verwijder geselecteerde
-SELECTONEITEM=Selecteer minimaal een item door het aan te vinken.
-FOLDEROPENED=map geopend
-FOLDERCLOSED=map gesloten
-MOVEITEMS=Verplaatsen items
+CREATEFOLDER=Create folder
+RENAMEFOLDER=Rename folder
+DELETEFOLDER=Delete folder
+TITLE=Title
+DESCRIPTION=Description
+FILENAME=Filename
+DATE=Date
+CREATE=create
+RENAME=rename
+MOVE=move
+OPEN=open
+MOVESINGLE=Move
+FILESTO=file(s) to:
+BACK=back
+ADDDOCUMENT=Add document
+ADDSOURCE=Add source
+ADDCHATLOG=Add chatlog
+MOVESELECTED=Move selected
+DELETESELECTED=Delete selected
+SELECTONEITEM=Select one or more items.
+FOLDEROPENED=folder opened
+FOLDERCLOSED=folder closed
+MOVEITEMS=Move items
 OPENITEM=Open item
-FOLDERITEMTYPEURL=informatiebron
+FOLDERITEMTYPEURL=infosource
 FOLDERITEMTYPEDOCUMENT=document
-FOLDERITEMTYPEPAGE=pagina
-FOLDERITEMTYPECHATLOG=chatverslag
+FOLDERITEMTYPEPAGE=page
+FOLDERITEMTYPECHATLOG=chatlog
 TYPE=Type
-FOLDERNAMENOTEMPTY=Geef een naam voor de map
-MYDOCUMENTSMENUITEM=mijn documenten
-SHAREDDOCUMENTSMENUITEM=gedeelde documenten
-DELETEYES=ja
-DELETENO=nee
-DELETETHISFOLDERYESNO=Wilt u deze map inclusief de inhoud echt verwijderen?
-DELETEFOLDERITEMSYESNO=Wilt u de geselecteerde mapitems echt verwijderen?
-DELETEFOLDERITEMS=Verwijder mapitems
+FOLDERNAMENOTEMPTY=Please give a name for the folder
+MYDOCUMENTSMENUITEM=my documents
+SHAREDDOCUMENTSMENUITEM=shared documents
+DELETEYES=yes
+DELETENO=no
+DELETETHISFOLDERYESNO=Do you really want to remove this folder and everything in it?
+DELETEFOLDERITEMSYESNO=Do you really to remove these items?
+DELETEFOLDERITEMS=Remove items
 ADDURL=Add URL
 SAVE=save
 REACTIONS=Reactions
 REACT=react
+
