Added an extra tld to the jar, containing also the jsp-2.0-only features. So, if you want to use those, you need to use another URI.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12566 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/taglib/build.xml
+++ b/applications/taglib/build.xml
@@ -42,6 +42,25 @@
       <arg value="-XSL"/>
       <arg value="${share.dir}/xslt/xml2tld.xslt" />
     </java>
+    <java classname="org.apache.xalan.xslt.Process"
+          classpathref="compile.classpath"
+          fork="yes"
+          failonerror="yes">
+      <arg value="-Q"/>
+      <arg value="-DIAG"/>
+      <arg value="-IN"/>
+      <arg value="file:///${project.source.dir}/src/${source-taglib.xml}"/>
+      <arg value="-PARAM"/>
+      <arg value="uri"/>
+      <arg value="http://www.mmbase.org/mmbase-taglib-2.0" />
+      <arg value="-PARAM"/>
+      <arg value="version"/>
+      <arg value="2.0" />
+      <arg value="-OUT"/>
+      <arg value="${project.metainf.dir}/taglib-2.0.tld"/>
+      <arg value="-XSL"/>
+      <arg value="${share.dir}/xslt/xml2tld.xslt" />
+    </java>
   </target>
 
 
