changed the ant script to that copied the resources will end up in the correct directory. This involves copying every test subdirectory separately
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12671 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/tests/build.xml
+++ b/tests/build.xml
@@ -107,7 +107,47 @@
     <echo message="copying" />
 
     <copy todir="${tests.build.dir}/classes" includeEmptyDirs="false" preservelastmodified="true">
-      <fileset dir="${tests.source.dir}" >
+      <fileset dir="${tests.source.dir}/dbsq" >
+        <include name="**/*.properties"/>
+        <include name="**/LICENSE"/>
+        <include name="**/*.dtd"/>
+        <include name="**/*.xml"/>
+        <include name="**/*.jpg"/>
+        <exclude name="build/**"/>
+        <exclude name="build*"/>
+        <exclude name="core"/>
+      </fileset>
+      <fileset dir="${tests.source.dir}/dbsq" >
+        <include name="**/*.properties"/>
+        <include name="**/LICENSE"/>
+        <include name="**/*.dtd"/>
+        <include name="**/*.xml"/>
+        <include name="**/*.jpg"/>
+        <exclude name="build/**"/>
+        <exclude name="build*"/>
+        <exclude name="core"/>
+      </fileset>
+      <fileset dir="${tests.source.dir}/convertimage" >
+        <include name="**/*.properties"/>
+        <include name="**/LICENSE"/>
+        <include name="**/*.dtd"/>
+        <include name="**/*.xml"/>
+        <include name="**/*.jpg"/>
+        <exclude name="build/**"/>
+        <exclude name="build*"/>
+        <exclude name="core"/>
+      </fileset>
+      <fileset dir="${tests.source.dir}/taglib" >
+        <include name="**/*.properties"/>
+        <include name="**/LICENSE"/>
+        <include name="**/*.dtd"/>
+        <include name="**/*.xml"/>
+        <include name="**/*.jpg"/>
+        <exclude name="build/**"/>
+        <exclude name="build*"/>
+        <exclude name="core"/>
+      </fileset>
+      <fileset dir="${tests.source.dir}/typerel" >
         <include name="**/*.properties"/>
         <include name="**/LICENSE"/>
         <include name="**/*.dtd"/>
