configuration options for page/text/type (wizards) some cleanup of the portfolio bugfixes in progress display
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12673 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/configure.properties
+++ b/contributions/didactor2/configure.properties
@@ -26,3 +26,5 @@ imageconvert.converterroot=d:\opensource\imagemagick
 imageconvert.convertercommand=convert.exe
 email.classfile=Dummy
 web.enable.error-page=false
+wizards.pages.text.type=ftype="html"
+
