--- a/speeltuin/keesj/maven/mmbase-core/project.properties
+++ b/speeltuin/keesj/maven/mmbase-core/project.properties
@@ -1,11 +1,11 @@
 maven.username=maven
-maven.jdiff.old.tag=MMBase-1_6
-maven.jdiff.new.tag=MMBase-1_7_0-rc2
+maven.jdiff.old.tag=MMBase-1_7
+maven.jdiff.new.tag=HEAD
 maven.junit.jvmargs=-Dmmbase.config=tests/config
 maven.test.failure.ignore=true
 maven.compile.source=1.4
 maven.compile.target=1.4
 maven.compile.fork=true
 maven.junit.fork=true
-maven.checkstyle.format=turbine
+maven.checkstyle.properties=checkstyle-mmbase.xml
 maven.repo.remote=http://mmapps.sourceforge.net/distributions,http://www.ibiblio.org/maven,http://maven-plugins.sourceforge.net/maven
