keesj:bare-bones-maven
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12690 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/build.xml
+++ b/speeltuin/keesj/maven/build.xml
@@ -5,15 +5,17 @@
   <property name="cvsmethod" value="pserver"/>
   <property name="mmbaseroot" value="tmp/mmbase-core"/>
   <property name="cvsroot" value=":${cvsmethod}:${cvsuser}@cvs.mmbase.org:/var/cvs "/>
+
   <target name="init">
     <cvspass cvsroot="${cvsroot}" password="${cvspasswd}"/>
     <cvs cvsRoot="${cvsroot}" package="mmbase-core" dest="tmp"/>
   </target>
+
   <target name="all" depends="mmbase-core"/>
   <target name="mmbase-core" depends="init">
     <!-- create a structure that matches the maven structure -->
     <delete dir="mmbase-core/CVS"/>
-    <copy todir="mmbase-core/src">
+    <copy todir="mmbase-core/src/java">
       <fileset dir="${mmbaseroot}/src" defaultexcludes="no">
         <exclude name="org/mmbase/module/builders/ConvertJAI.java"/>
         <exclude name="org/mmbase/module/JMSendMail.java"/>
@@ -21,29 +23,15 @@
         <exclude name="org/mmbase/module/database/support/MMInformix42Node.java"/>
       </fileset>
     </copy>
-    <copy todir="mmbase-core/sdocbook">
-      <fileset dir="${mmbaseroot}/documentation" defaultexcludes="no">
-        <exclude name="**/build.xml"/>
-        <exclude name="frontenddevelopers/editwizard/**"/>
-      </fileset>
-    </copy>
-    <copy todir="mmbase-core/tests">
+    <copy todir="mmbase-core/src/tests">
       <fileset dir="${mmbaseroot}/tests/bridge"/>
       <fileset dir="${mmbaseroot}/tests/common"/>
       <fileset dir="${mmbaseroot}/tests/convertimage"/>
       <fileset dir="${mmbaseroot}/tests/dbsq"/>
       <fileset dir="${mmbaseroot}/tests/typerel"/>
     </copy>
-    <copy todir="mmbase-core/tests/config">
+    <copy todir="mmbase-core/src/tests/config">
       <fileset dir="${mmbaseroot}/tests/config"/>
-    </copy>
-    <copy todir="mmbase-core/xdocs/docbook/media" flatten="true">
-      <fileset dir="${mmbaseroot}/documentation">
-        <include name="**/*.jpg"/>
-        <include name="**/*.png"/>
-        <include name="**/*.eps"/>
-        <include name="**/*.eps"/>
-      </fileset>
     </copy>
   </target>
 </project>
