--- a/speeltuin/keesj/maven/build.xml
+++ b/speeltuin/keesj/maven/build.xml
@@ -4,14 +4,17 @@
   <property name="cvspasswd" value="guest"/>
   <property name="cvsmethod" value="pserver"/>
   <property name="mmbaseroot" value="tmp/mmbase-core"/>
+  <property name="taglibroot" value="tmp/mmbase-taglib"/>
   <property name="cvsroot" value=":${cvsmethod}:${cvsuser}@cvs.mmbase.org:/var/cvs "/>
 
   <target name="init">
     <cvspass cvsroot="${cvsroot}" password="${cvspasswd}"/>
     <cvs cvsRoot="${cvsroot}" package="mmbase-core" dest="tmp"/>
+    <cvs cvsRoot="${cvsroot}" package="mmbase-taglib" dest="tmp"/>
   </target>
 
   <target name="all" depends="mmbase-core"/>
+
   <target name="mmbase-core" depends="init">
     <!-- create a structure that matches the maven structure -->
     <delete dir="mmbase-core/CVS"/>
@@ -32,6 +35,16 @@
     </copy>
     <copy todir="mmbase-core/src/tests/config">
       <fileset dir="${mmbaseroot}/tests/config"/>
+    </copy>
+
+    <copy todir="mmbase-core/src/tests/config">
+      <fileset dir="${mmbaseroot}/tests/config"/>
+    </copy>
+    <copy todir="mmbase-core-config/config">
+      <fileset dir="${mmbaseroot}/config"/>
+    </copy>
+    <copy todir="mmbase-taglib/src/java">
+      <fileset dir="${taglibroot}/src"/>
     </copy>
   </target>
 </project>
