keesj:Added copying of html to the mmbase-webapp/src/webapp directory
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12708 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/build.xml
+++ b/speeltuin/keesj/maven/build.xml
@@ -36,6 +36,9 @@
     <copy todir="mmbase-core/src/tests/config">
       <fileset dir="${mmbaseroot}/tests/config"/>
     </copy>
+    <copy todir="mmbase-webapp/src/webapp">
+      <fileset dir="${mmbaseroot}/html"/>
+    </copy>
 
     <copy todir="mmbase-core/src/tests/config">
       <fileset dir="${mmbaseroot}/tests/config"/>
