swichted taglib to 1.2
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12709 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/keesj/maven/mmbase-taglib/project.properties
+++ b/speeltuin/keesj/maven/mmbase-taglib/project.properties
@@ -11,3 +11,7 @@ maven.junit.fork=true
 maven.checkstyle.properties=checkstyle-mmbase.xml
 maven.repo.remote=http://mmapps.sourceforge.net/distributions,http://www.ibiblio.org/maven,http://maven-plugins.sourceforge.net/maven,http://maven-taglib.sourceforge.net/maven
 taglib.src.dir=${maven.build.dir}/generated-tld
+taglib.tld.src = mmbase-taglib.tld
+taglib.tld.out = mmbase-taglib.tld
+taglib.tld.src.version = 1.1
+taglib.tld.out.version = 1.2
