*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12730 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/build.xml
+++ b/contributions/didactor2/build.xml
@@ -64,6 +64,9 @@
             </fileset>
         </copy>
       </then>
+      <else>
+        <echo message="WARNING! provider ${provider} does not have any templates in src/core/templates/${provider}!!!"/>
+      </else>
     </if>
   </target>
 
