--- a/contributions/didactor2/src/core/java/nl/didactor/component/core/CoreMessageBundle.properties
+++ b/contributions/didactor2/src/core/java/nl/didactor/component/core/CoreMessageBundle.properties
@@ -28,3 +28,5 @@ NO=no
 DELETETHISCOMPONENTYESNO=Do you want to delete this component?
 HOME=home
 PRINT=print
+LISTALLPORTFOLIOS=View all public portfolios
+
