--- a/applications/rmmci/build.xml
+++ b/applications/rmmci/build.xml
@@ -116,6 +116,12 @@ Build-by: ${ant.version}
 Build-java-version: ${ant.java.version}
 Build-compiler: ${build.compiler}
 </echo>
+    <copy todir="build/classes">
+      <mapper type="glob" from="*" to="org/mmbase/config/*" />
+      <fileset dir="config" includes="**">
+      </fileset>
+    </copy>
+
     <jar jarfile="${project.jar.dir}/mmbase-rmmci-server.jar" manifest="build/rmmcitmp/manifest.mf">
       <fileset dir="build/classes">
         <include name="org/mmbase/**"/>
@@ -133,6 +139,9 @@ Build-compiler: ${build.compiler}
         <include name="org/mmbase/bridge/*"/>
         <include name="org/mmbase/storage/search/*"/>
         <include name="org/mmbase/util/logging/**"/>
+        <include name="org/mmbase/security/UserContext.class"/>
+        <include name="org/mmbase/security/AuthenticationData.class"/>
+        <include name="org/mmbase/security/Rank.class"/>
         <include name="org/w3c/dom/Document.class"/>
         <include name="org/w3c/dom/Node.class"/>
         <include name="org/w3c/dom/Element.class"/>
