*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12925 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/configure.properties
+++ b/contributions/didactor2/configure.properties
@@ -27,4 +27,5 @@ imageconvert.convertercommand=convert.exe
 email.classfile=Dummy
 web.enable.error-page=false
 wizards.pages.text.type=ftype="html"
+internalUrl=http://localhost:8080/didactor
 
