--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -1,189 +1,183 @@
-addressbook=Adresboek
-menuitemaddressbook=adresboek
-addcontact=Toevoegen contactpersoon
-deletecontact=Verwijderen contactpersoon
-updatecontact=Wijzigen contactpersoon
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-create=aanmaken
-back=terug
-update=wijzigen
-studentonline=Student online
-studentoffline=Student offline
-teacheronline=Leraar online
-teacheroffline=Leraar offline
-editoronline=Editor online
-editoroffline=Editor offline
-type=Type
-initials=Initialen
-firstname=Voornaam
-lastname=Achternaam	
-email=Email
-address=Adres
-zipcode=Postcode
-city=Plaats
-telephone=Telefoon
-contact=Contactpersoon
-firstnamenotempty=Geef een waarde voor voornaam
-lastnamenotempty=Geef een waarde voor achternaam
-deleteyes=ja
-deleteno=nee
-deleteselectedcontactsyesno=Wilt u de geselecteerde contactpersonen echt verwijderen?
-calendar=Agenda
-addpersonalagendaitem=Persoonlijke afspraak plaatsen
+addchatlog=Chatverslag plaatsen
+addchatlogpersonal=Toevoegen chatverslag aan persoonlijke werkruimte
+addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
 addclassagendaitem=Klas afspraak plaatsen
+addcontact=Toevoegen contactpersoon
+adddocument=Document plaatsen
+addpersonalagendaitem=Persoonlijke afspraak plaatsen
+address=Adres
+addressbook=Adresboek
+addsource=Informatiebron plaatsen
 addworkgroupagendaitem=Werkgroep afspraak plaatsen
-deleteagendaitem=Verwijderen afspraak
+administrator=beheerder
+administrators=beheerders
 agendaitemappointment=Agenda afspraak
-printagenda=afdrukken
-create=aanmaken
-back=terug
-class=Klas
-workgroup=Werkgroep
 appointment=Afspraak
-starttime=Start
-endtime=Eind
-starttimelessthanendtime=Starttijd moet later liggen dan de eindtijd
-chatmenuitem=chat
+attachments=bijlage(s)
+back=terug
+bodyEmpty=Voer de tekst van het bericht in!
+buttontextdone=klaar
+buttontextnext=volgende
+by_user=door
+calendar=Agenda
+categories=Categorieën
+cc=cc
 chatlogmenuitem=chatverslag
 chatlogtitle=Chatverslag
 chatlogtitlelowercase=chatverslag
-folderopened=chatverslag geopend
-folderclosed=chatverslag gesloten
-addchatlogpersonal=Toevoegen chatverslag aan persoonlijke werkruimte
-addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
-EDUCATION=Opleiding
-testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
-buttontextdone=klaar
-buttontextnext=volgende
-educations=Opleidingen
-createNewEducation=Nieuwe Opleiding Aanmaken
-createNewEducationDescription=Maak een nieuwe opleiding aan
-treatEducation=Bewerk opleiding
-treat=bewerk
+chatmenuitem=chat
+city=Plaats
+class=Klas
+closeforum=sluit forum voor studenten
+contact=Contactpersoon
 contentmanagement=contentbeheer
 coursemanagement=cursusbeheer
-administrator=beheerder
-toEmpty=Voer een ontvanger in voor dit email bericht!
-subjectEmpty=Voer een onderwerp in voor dit email bericht!
-bodyEmpty=Voer de tekst van het bericht in!
-writemessage=schrijf bericht
-to=aan
-cc=cc
-addressbook=adresboek
-subject=onderwerp
-attachments=bijlage(s)
-send=verstuur
-back=terug
-administrators=beheerders
-teachers=docenten
-students=studenten
-useThese=gebruik deze
-hide=verberg
-name=naam
-emailtitle=E-mail
-mailboxes=E-Mail mappen
-writenewemail=Nieuwe e-mail schrijven
-moveselected=Verplaats geselecteerde
-deleteselected=Verwijder geselecteerde
-moveitems=Verplaatsen items
-create=aanmaken
-move=verplaatsen
-back=terug
-movesingle=Verplaats
-filesto=bestand(en) naar:
-createfolder=Aanmaken map
-renamefolder=Hernoemen map
-deletefolder=Verwijderen map
-mailboxnamenotempty=Geef een naam voor de map
-deleteyes=ja
-deleteno=nee
-deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
-deletefolderitems=Verwijder mapitems
-forum=Forum
-newforum=nieuw forum
-newtopic=nieuw onderwerp
-closeforum=sluit forum voor studenten
-message=Plaats bericht
-openforum=open forum voor studenten
-table_name=onderwerp
-table_no_posts=aantal posts
-table_latest_post=laatste
-by_user=door
-remove_thread=verwijder alle
-print=print
-remove=verwijder
-post=plaats
-back=terug
-notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
 create_forum_name=Forum naam
-create=aanmaken
 create_topic_name=onderwerp naam
-sources=Informatiebronnen
-categories=Categorieën
-folderopened=categorie geopend
-folderclosed=categorie gesloten
-urlname=Naam
-urllink=Link
-urldescription=Beschrijving
-sourcesmenuitem=informatiebronnen
-mydocuments=Mijn documenten
-shareddocuments=Gedeelde documenten
-folders=Mappen
-createfolder=Aanmaken map
-renamefolder=Hernoemen map
-deletefolder=Verwijderen map
-title=Titel
-description=Beschrijving
-filename=Bestand
-date=Datum
 create=aanmaken
-rename=hernoemen
-move=verplaatsen
-open=openen
-movesingle=Verplaats
-filesto=bestand(en) naar:
-back=terug
-adddocument=Document plaatsen
-addsource=Informatiebron plaatsen
-addchatlog=Chatverslag plaatsen
-moveselected=Verplaats geselecteerde
-deleteselected=Verwijder geselecteerde
-selectoneitem=Selecteer minimaal een item door het aan te vinken.
-folderopened=map geopend
-folderclosed=map gesloten
-moveitems=Verplaatsen items
-openitem=Open item
-folderitemtypeurl=informatiebron
-folderitemtypedocument=document
-folderitemtypepage=pagina
-folderitemtypechatlog=chatverslag
-type=Type
-foldernamenotempty=Geef een naam voor de map
-mydocumentsmenuitem=mijn documenten
-shareddocumentsmenuitem=gedeelde documenten
-deleteyes=ja
-deleteno=nee
-deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
-deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
-deletefolderitems=Verwijder mapitems
-LEARNENVIRONMENTTITLE=Leeromgeving
-editComponents=Componenten beheer
-editComponentsDescription=Ga naar het componenten beheer
-roles=Rollen Beheer
-editPeopleRoleRelEducation=Toevoegen/bewerken rollen
-editPeopleRoleRelEducationDescription=Bewerken rollen
-createNewRoles=Nieuwe rol toevoegen
-createNewRolesDescription=Voeg een nieuwe rol toe aan de opleiding
-treatRoles=Bewerk bestaande rol
-metadata=Metadata
+createfolder=Aanmaken map
+createNewCouplingquestions=Maak een koppel vraag aan
+createNewCouplingquestionsDescription=Nieuwe koppel vraag aanmaken
+createNewDropquestions=Maak een drag-en-drop vraag aan
+createNewDropquestionsDescription=Nieuwe drag-en-drop vraag aanmaken
+createNewEducation=Nieuwe Opleiding Aanmaken
+createNewEducationDescription=Maak een nieuwe opleiding aan
+createNewFlash=Maak een nieuwe flash file aan
+createNewFlashDescription=Nieuwe flash file aanmaken
+createNewHotspotquestions=Maak een hotspot vraag aan
+createNewHotspotquestionsDescription=Nieuwe hotspot vraag aanmaken
+createNewLearnblock=Maak een nieuwe leerblok aan
+createNewLearnblockDescription=Nieuwe leerblok aanmaken
+createNewMcquestions=Maak een nieuwe vraag aan
+createNewMcquestionsDescription=Nieuwe vraag aanmaken
 createNewMetadatastandard=Voeg nieuwe metadata standaard toe
 createNewMetadatastandardDescription=Nieuwe metadata standaard toevoegen
-treatMetastandard=Bewerk bestaande metadata standaard
-createNewMetadefinition=Voeg nieuwe metadefitie toe
+createNewMetadefinition=Voeg nieuwe metadefinitie toe
 createNewMetadefinitionDescription=Nieuwe metadafinitie toevoegen
-treatMetadefinition=Bewerk bestaande metadefinitie
+createNewOpenquestions=Maak een open vraag aan
+createNewOpenquestionsDescription=Nieuwe open vraag aanmaken
+createNewPage=Maak een nieuwe pagina aan
+createNewPageDescription=Nieuwe pagina aanmaken
+createNewRankingquestions=Maak een rangorde vraag aan
+createNewRankingquestionsDescription=Nieuwe rangorde vraag aanmaken
+createNewRoles=Nieuwe rol toevoegen
+createNewRolesDescription=Voeg een nieuwe rol toe aan de opleiding
+createNewTest=Maak een nieuwe test aan
+createNewTestDescription=Nieuwe test aanmaken
+createNewValuequestions=Maak een waarde vraag aan
+createNewValuequestionsDescription=Nieuwe waardevraag aanmaken
+date=Datum
+deleteagendaitem=Verwijderen afspraak
+deletecontact=Verwijderen contactpersoon
+deletefolder=Verwijderen map
+deletefolderitems=Verwijder mapitems
+deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
+deleteno=nee
+deleteselected=Verwijder geselecteerde
+deleteselectedcontactsyesno=Wilt u de geselecteerde contactpersonen echt verwijderen?
+deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
+deleteyes=ja
+description=Beschrijving
+editComponents=Componenten beheer
+editComponentsDescription=Ga naar het componenten beheer
 editEducation=Bewerk bestaande opleiding
-treatLearnobject=Bewerk bestaand leerobject
+editoroffline=Editor offline
+editoronline=Editor online
+editPeopleRoleRelEducation=Toevoegen/bewerken rollen
+editPeopleRoleRelEducationDescription=Bewerken rollen
+EDUCATION=Opleiding
+educations=Opleidingen
+email=Email
+emailtitle=E-mail
+endtime=Eind
 filemanagement=Filemanagement
-
+filename=Bestand
+filesto=bestand(en) naar:
+filesto=bestand(en) naar:
+firstname=Voornaam
+firstnamenotempty=Geef een waarde voor voornaam
+folderclosed=categorie gesloten
+folderclosed=chatverslag gesloten
+folderclosed=map gesloten
+folderitemtypechatlog=chatverslag
+folderitemtypedocument=document
+folderitemtypepage=pagina
+folderitemtypeurl=informatiebron
+foldernamenotempty=Geef een naam voor de map
+folderopened=categorie geopend
+folderopened=chatverslag geopend
+folderopened=map geopend
+folders=Mappen
+forum=Forum
+hide=verberg
+initials=Initialen
+lastname=Achternaam
+lastnamenotempty=Geef een waarde voor achternaam
+LEARNENVIRONMENTTITLE=Leeromgeving
+mailboxes=E-Mail mappen
+mailboxnamenotempty=Geef een naam voor de map
+menuitemaddressbook=adresboek
+message=Plaats bericht
+metadata=Metadata beheer
+move=verplaatsen
+moveitems=Verplaatsen items
+moveselected=Verplaats geselecteerde
+movesingle=Verplaats
+mydocuments=Mijn documenten
+mydocumentsmenuitem=mijn documenten
+name=naam
+newforum=nieuw forum
+newtopic=nieuw onderwerp
+notallowed_to_remove=Het is niet toegestaan het forum te verwijderen.
+open=openen
+openforum=open forum voor studenten
+openitem=Open item
+post=plaats
+print=print
+printagenda=afdrukken
+remove_thread=verwijder alle
+remove=verwijder
+rename=hernoemen
+renamefolder=Hernoemen map
+roles=Rollen Beheer
+selectoneitem=Selecteer minimaal een item door het aan te vinken.
+send=verstuur
+shareddocuments=Gedeelde documenten
+shareddocumentsmenuitem=gedeelde documenten
+sources=Informatiebronnen
+sourcesmenuitem=informatiebronnen
+starttime=Start
+starttimelessthanendtime=Starttijd moet later liggen dan de eindtijd
+studentoffline=Student offline
+studentonline=Student online
+students=studenten
+subject=onderwerp
+subjectEmpty=Voer een onderwerp in voor dit email bericht!
+table_latest_post=laatste
+table_name=onderwerp
+table_no_posts=aantal posts
+teacheroffline=Leraar offline
+teacheronline=Leraar online
+teachers=docenten
+telephone=Telefoon
+testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
+title=Titel
+to=aan
+toEmpty=Voer een ontvanger in voor dit email bericht!
+treat=bewerk
+treatEducation=Bewerk opleiding
+treatLearnobject=Bewerk bestaand leerobject
+treatMetadefinition=Bewerk bestaande metadefinitie
+treatMetastandard=Bewerk bestaande metadata standaard
+treatRoles=Bewerk bestaande rol
+type=Type
+update=wijzigen
+updatecontact=Wijzigen contactpersoon
+urldescription=Beschrijving
+urllink=Link
+urlname=Naam
+useThese=gebruik deze
+workgroup=Werkgroep
+writemessage=schrijf bericht
+writenewemail=Nieuwe e-mail schrijven
+zipcode=Postcode
