Spliting of education tree by AZ
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13117 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -85,6 +85,12 @@ editoroffline=Editor offline
 editoronline=Editor online
 editPeopleRoleRelEducation=Toevoegen/bewerken rollen
 editPeopleRoleRelEducationDescription=Bewerken rollen
+educationMenuComponents=Componenten
+educationMenuRoles=Rollen
+educationMenuCompetence=Competentie
+educationMenuMetadata=Metadata
+educationMenuFilemanagement=Filemanagement
+educationMenuEducations=Opleidingen
 EDUCATION=Opleiding
 educations=Opleidingen
 email=Email
