*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13127 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/build.xml
+++ b/contributions/didactor2/build.xml
@@ -34,6 +34,13 @@
     <replace file="${build.dir}/webapp/WEB-INF/web.xml"
              token="$${filemanagement.data.url}"
              value="${filemanagement.data.url}"/>
+
+    <replace file="${build.dir}/webapp/WEB-INF/web.xml"
+             token="$${emailsenderdomain}"
+             value="${emailsenderdomain}"/>
+
+
+
   </target>
 
   <target name="clean">
