--- a/contributions/didactor2/configure.properties
+++ b/contributions/didactor2/configure.properties
@@ -28,4 +28,5 @@ email.classfile=Dummy
 web.enable.error-page=false
 wizards.pages.text.type=ftype="html"
 internalUrl=http://localhost:8080/didactor
+emailsenderdomain=localhost
 
