New submenu "tests" in education top menu
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13164 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -90,6 +90,7 @@ educationMenuRoles=Rollen
 educationMenuCompetence=Competentie
 educationMenuMetadata=Metadata
 educationMenuFilemanagement=Filemanagement
+educationMenuTests=Toetsen
 educationMenuEducations=Opleidingen
 EDUCATION=Opleiding
 educations=Opleidingen
@@ -167,6 +168,7 @@ teacheronline=Leraar online
 teachers=docenten
 telephone=Telefoon
 testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
+tests=Toetsen beheer
 title=Titel
 to=aan
 toEmpty=Voer een ontvanger in voor dit email bericht!
@@ -176,6 +178,7 @@ treatLearnobject=Bewerk bestaand leerobject
 treatMetadefinition=Bewerk bestaande metadefinitie
 treatMetastandard=Bewerk bestaande metadata standaard
 treatRoles=Bewerk bestaande rol
+treatTest=Bewerk bestaande toetsen
 type=Type
 update=wijzigen
 updatecontact=Wijzigen contactpersoon
